--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,22 @@
-<p>
-  home works!
-</p>
+
+<div class="container color-dark">
+	<div class="col">
+		<p>Add a bucket list item</p>
+	</div>
+	<div class="col">
+		<p>Youre bucket list</p>
+	</div>
+</div>
+ 
+<div class="container color-light">
+	<div class="col">
+		<p class="sm">Just do it</p>
+		<form>
+			<input type="text" class="txt" name="item" placeholder="item dis">
+			<input type="submit" class="btn" value="Add item">
+		</form>
+	</div>
+	<div class="col">
+		<p class="life-container">Youre bucket list</p>
+	</div>
+</div>
