--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 		<p>Add a bucket list item</p>
 	</div>
 	<div class="col">
-		<p>Youre bucket list</p>
+		<p>Youre bucket list ({{ itemCount }})</p>
 	</div>
 </div>
  
@@ -12,11 +12,13 @@
 	<div class="col">
 		<p class="sm">Just do it</p>
 		<form>
-			<input type="text" class="txt" name="item" placeholder="item dis">
-			<input type="submit" class="btn" value="Add item">
+			<input type="text" class="txt" name="item" placeholder="input here"[(ngModel)]="goalText">
+			<input type="submit" class="btn" [value]="btnText" (click)="addItem()">
 		</form>
 	</div>
 	<div class="col">
-		<p class="life-container">Youre bucket list</p>
+		<p class="life-container" *ngFor="let goal of goals">
+			{{ goal }}
+		</p>
 	</div>
 </div>
