--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,18 +1,19 @@
 
 <div class="container color-dark">
 	<div class="col">
-		<p>Add a bucket list item</p>
+		<h4>Add a bucket list item</h4>
 	</div>
 	<div class="col">
-		<p>Youre bucket list ({{ itemCount }})</p>
+		<h4>Your Bucket List At the Moment ({{ itemCount }})</h4>
 	</div>
 </div>
  
 <div class="container color-light">
 	<div class="col">
-		<p class="sm">Just do it</p>
+		<p class="sm">Just Input Here Your Goals and YOLO .</p>
 		<form>
 			<input type="text" class="txt" name="item" placeholder="input here"[(ngModel)]="goalText">
+			<br><br>
 			<input type="submit" class="btn" [value]="btnText" (click)="addItem()">
 		</form>
 	</div>
