--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,9 +10,9 @@
  
 <div class="container color-light">
 	<div class="col">
-		<p class="sm">Just Input Here Your Goals and YOLO .</p>
+		<p class="sm">Just Input Here Your Goals YOLO .</p>
 		<form>
-			<input type="text" class="txt" name="item" placeholder="input here"[(ngModel)]="goalText">
+			<input type="text" class="txt" name="item" placeholder="Input Your Goals Here!"[(ngModel)]="goalText">
 			<br><br>
 			<input type="submit" class="btn" [value]="btnText" (click)="addItem()">
 		</form>
